updating less likely to likely

--- a/coupons.ipynb
+++ b/coupons.ipynb
@@ -1378,7 +1378,7 @@
    ],
    "source": [
     "'''\n",
-    "In general people were less likely to accept the coupons when taking the entire population into consideration. Statistics for the Yes vs No of the entire population:\n",
+    "In general people were likely to accept the coupons when taking the entire population into consideration. Statistics for the Yes vs No of the entire population:\n",
     "Population proportion of coupon acceptance:\n",
     "Stats:\n",
     "\n",
